kube/gshop-order-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gshop-order-service-dep
  labels:
    app: gshop-order-service-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gshop-order-service
  template:
    metadata:
      labels:
        app: gshop-order-service
    spec:
      containers:
        - name: gshop-order-service
          image: goreit/gshop-order-service:latest
          ports:
            - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: gshop-order-service-svc
  labels:
    app: gshop-order-service
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: gshop-order-service
