kube/backend-gshop_ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: backend-gshop-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - backend.gshop.pl
      secretName: hello-kubernetes-tls
  rules:
    - host: backend.gshop.pl
      http:
        paths:
          - backend:
              serviceName: gshop-svc
              servicePort: 8080
            path: /
